@@ -1,5 +1,7 @@
 2012-01-03 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/utils/na-gconf2key.sh.in: Force GConf I/O provider to be read-only.
+
 	* src/utils/console-utils.h: Remove superfluous 'glib-object.h' include.
 
 	* src/utils/na-set-conf.c: New program.
